--- a/lab02/tongol-bio.html
+++ b/lab02/tongol-bio.html
@@ -41,7 +41,8 @@
     </p>
 
     <p>
-        I’m in a family of four with both my parents and my little brother. We moved to the States when I was 3 years old. Most of my extended family doesn’t live in the US, and rather in the Philippines or various countries in the world.
+        I’m in a family of four with both my parents and my little brother. We moved to the States when I was 3 years old. 
+        <br>Most of my extended family doesn’t live in the US, and rather in the Philippines or various countries in the world.
     </p>
     
     <p>
