--- a/lab05/tongol-bio.html
+++ b/lab05/tongol-bio.html
@@ -9,7 +9,7 @@
 
     <h1>Francine Tongol's Biography</h1>
     
-    <img src="../images/lab5img.png">
+    <img src="../images/lab5img.jpg">
 
     <p>
         I’m a <strong>communications design major</strong> interested in creating website designs and UX/UI Design for mobile applications.
